--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "firebase": "^10.11.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "sass": "^1.74.1"
